--- a/InstaUserStoryApp/Base.lproj/Main.storyboard
+++ b/InstaUserStoryApp/Base.lproj/Main.storyboard
@@ -37,7 +37,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pexels-photo-415326.jpeg" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xo3-cp-fqy">
+                                                <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UserPic.jpeg" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xo3-cp-fqy">
                                                     <rect key="frame" x="2" y="2" width="96" height="96"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -65,6 +65,7 @@
                                         </userDefinedRuntimeAttributes>
                                         <connections>
                                             <outlet property="profileImageView" destination="Xo3-cp-fqy" id="NlQ-mK-vD7"/>
+                                            <segue destination="OyD-az-Pic" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="UMI-A2-9LD"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -91,6 +92,46 @@
             </objects>
             <point key="canvasLocation" x="260" y="133.5832083958021"/>
         </scene>
+        <!--Story View Controller-->
+        <scene sceneID="Fl1-2C-dHj">
+            <objects>
+                <viewController modalTransitionStyle="partialCurl" id="OyD-az-Pic" customClass="StoryViewController" customModule="InstaUserStoryApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0gP-dF-m1r">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h8D-5m-JKp">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="caE-ph-VJj">
+                                <rect key="frame" x="313" y="20" width="44" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="X">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="tappedCloseButton:" destination="OyD-az-Pic" eventType="touchUpInside" id="PIG-uL-QcE"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="h8D-5m-JKp" firstAttribute="leading" secondItem="1WT-CD-4En" secondAttribute="leading" id="VKd-0r-rCV"/>
+                            <constraint firstItem="h8D-5m-JKp" firstAttribute="top" secondItem="0gP-dF-m1r" secondAttribute="top" id="cgV-yr-eww"/>
+                            <constraint firstItem="h8D-5m-JKp" firstAttribute="trailing" secondItem="1WT-CD-4En" secondAttribute="trailing" id="dYY-VL-6hh"/>
+                            <constraint firstItem="h8D-5m-JKp" firstAttribute="bottom" secondItem="1WT-CD-4En" secondAttribute="bottom" id="ytq-aU-aHZ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="1WT-CD-4En"/>
+                    </view>
+                    <connections>
+                        <outlet property="photoImageView" destination="h8D-5m-JKp" id="LBt-fb-f6e"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AQQ-PU-EZU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1084" y="121.88905547226388"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="v9t-ad-PNB">
             <objects>
@@ -111,6 +152,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="pexels-photo-415326.jpeg" width="3360" height="5040"/>
+        <image name="UserPic.jpeg" width="3360" height="5040"/>
     </resources>
 </document>
