Added swipe gesture and reverse cube transition

--- a/InstaUserStoryApp/StoryBoard/Base.lproj/Main.storyboard
+++ b/InstaUserStoryApp/StoryBoard/Base.lproj/Main.storyboard
@@ -116,7 +116,7 @@
                     <view key="view" contentMode="scaleToFill" id="3ie-JT-dzX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="kdH-J8-HtY"/>
                     </view>
                 </viewController>
@@ -169,7 +169,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AQQ-PU-EZU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1250" y="122"/>
+            <point key="canvasLocation" x="1248.8" y="121.88905547226388"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="v9t-ad-PNB">
